# cmakeTest

./: CMakeLists.txt  email.txt
harp/: CMakeLists.txt
lib/: CMakeLists.txt
problem1/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  perform
problem1/harp/: CMakeLists.txt  Makefile  cmake_install.cmake
problem1/lib/: CMakeLists.txt  Makefile  cmake_install.cmake
problem2/: CMakeLists.txt
problem2/apps/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
problem2/apps/apps/: Makefile  cmake_install.cmake  hello
problem2/apps/include/: Makefile  cmake_install.cmake
problem2/include/: CMakeLists.txt
